--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,13 @@ crispy-bootstrap5 = "^2023.10"
 django-crispy-forms = "^2.1"
 django-extensions = "^3.2.3"
 djangorestframework = "^3.14.0"
+psycopg2-binary = "^2.9.9"
+pre-commit = "^3.6.2"
 
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.1"
+icecream = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core"]
