--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "djangoproject"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = [""]
 license = "MIT"
 readme = "README.md"
 
@@ -16,12 +16,20 @@ django-crispy-forms = "^2.1"
 django-extensions = "^3.2.3"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
-pre-commit = "^3.6.2"
+pdfkit = "^1.0.0"
+wkhtmltopdf = "^0.2"
+xhtml2pdf = "^0.2.15"
+django-taggit = "^5.0.1"
+reportlab = "4.0.9"
+
 
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^3.6.1"
 icecream = "^2.1.3"
+django-debug-toolbar = "^4.3.0"
+pre-commit = "^3.6.2"
+factory-boy = "^3.3.0"
+coverage = "^7.5.1"
 
 [build-system]
 requires = ["poetry-core"]
