--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,10 @@ DEBUG=True
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY=secret
+
+# Django Database
+POSTGRES_DB=your_db_name
+POSTGRES_USER=your_db_user
+POSTGRES_PASSWORD=your_db_password
+POSTGRES_HOST=your_db_host
+POSTGRES_PORT=your_db_port
